WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178144
AccessibilityRenderObject should not hold a raw pointer to RenderObject
https://bugs.webkit.org/show_bug.cgi?id=178144
Summary
AccessibilityRenderObject should not hold a raw pointer to RenderObject
alan
Reported
2017-10-10 14:14:16 PDT
the m_renderer's lifetime is not controlled by the AX object.
Attachments
Patch
(20.65 KB, patch)
2017-10-10 14:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-10 14:14:32 PDT
<
rdar://problem/34919287
>
alan
Comment 2
2017-10-10 14:25:51 PDT
Created
attachment 323350
[details]
Patch
chris fleizach
Comment 3
2017-10-10 14:31:39 PDT
Comment on
attachment 323350
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=323350&action=review
> Source/WebCore/accessibility/AccessibilityRenderObject.h:220 > + WeakPtr<RenderObject> m_renderer;
can we move this to private, so fewer clients will be tempted to use it directly
alan
Comment 4
2017-10-10 14:32:30 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 323350
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=323350&action=review
> > > Source/WebCore/accessibility/AccessibilityRenderObject.h:220 > > + WeakPtr<RenderObject> m_renderer; > > can we move this to private, so fewer clients will be tempted to use it > directly
Sure! Good idea.
alan
Comment 5
2017-10-10 15:09:28 PDT
(In reply to zalan from
comment #4
)
> (In reply to chris fleizach from
comment #3
) > > Comment on
attachment 323350
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=323350&action=review
> > > > > Source/WebCore/accessibility/AccessibilityRenderObject.h:220 > > > + WeakPtr<RenderObject> m_renderer; > > > > can we move this to private, so fewer clients will be tempted to use it > > directly > Sure! Good idea.
If you don't mind, I'd rather do that in a separate patch.
WebKit Commit Bot
Comment 6
2017-10-10 15:47:34 PDT
Comment on
attachment 323350
[details]
Patch Clearing flags on attachment: 323350 Committed
r223151
: <
http://trac.webkit.org/changeset/223151
>
WebKit Commit Bot
Comment 7
2017-10-10 15:47:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug